--- a/src/global.css
+++ b/src/global.css
@@ -9,6 +9,16 @@
   padding: 0;
   outline: none;
   box-sizing: border-box;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 *:focus {
@@ -16,5 +26,7 @@
 }
 
 body {
+  overflow-y: scroll;
+  overflow-x: hidden;
   background-color: theme(colors.slate.100);
 }
